"Updated to_markdown function to replace '•' with '  *' and added indentation to Markdown text"

--- a/src/amazon_f_hanson.ipynb
+++ b/src/amazon_f_hanson.ipynb
@@ -418,7 +418,11 @@
     "from IPython.display import display\n",
     "from IPython.display import Markdown\n",
     "\n",
-    "def to_markdown"
+    "def to_markdown(text):\n",
+    "    text = text.replace('•', '  *')\n",
+    "    return Markdown(textwrap.indent(text, '> ', predicate=lambda _: True))\n",
+    "\n",
+    "\n"
    ]
   },
   {
